--- a/templates/signin.html
+++ b/templates/signin.html
@@ -27,51 +27,53 @@
 
     <div class="container-fluid ">
 
-    <div class="row justify-content-center" style="box-sizing: border-box;">
+        <div class="row justify-content-center" style="box-sizing: border-box;">
 
 
-        <div class="col-sm-6 " style="margin-top: 100px;">
-        <form class="cs-form  card shadow-lg m-4" method="post">
-            {% csrf_token %}
+            <div class="col-sm-6 " style="margin-top: 100px;">
+                <form class="cs-form  card shadow-lg m-3" method="post">
+                    {% csrf_token %}
 
-            <div class="text-center text-white" style="background: #00838f; padding-top: 13px;">
-                <p style="font-family: Racing Sans One; font-size: 25px;">SIGN IN</p>
+                    <div class="text-center text-white" style="background: #00838f; padding-top: 13px;">
+                        <p style="font-family: Racing Sans One; font-size: 25px;">SIGN IN</p>
+                    </div>
+                    <div class="mt-4 p-3">
+                        <div class="row mb-n4 align-items-center">
+                            <div class="col" style="text-align: center;">
+                                <div class="text-center text-white pb-5">
+                                    <img src="{% static 'img/logof.png' %}" width="250" height="50" alt="">
+                                </div>
+                            </div>
+                            <div class="col" style="text-align: right;">
+                                <div class="cs-form" style="text-align: left;">
+                                    <label>User Name</label>
+                                    <input type="text" id="username" name="username" class="form-control" required />
+
+                                </div>
+
+                                <div class="cs-form" style="text-align: left;">
+                                    <label>Password</label>
+                                    <input type="password" id="pass1" name="pass1" class="form-control" required />
+
+                                </div>
+                                <button type="submit"
+                                    class="btn btn-block btn-success btn-lg btn-floating my-3 btn-outline-white"
+                                    style="background-color: #00838f;">
+                                    Sign In
+                                </button>
+
+                            </div>
+                            <p class="text-center m-0">
+                                Create new account? <a class="text-decoration-none" style="color: #00838f;"
+                                    href="{% url 'signup' %}">Sign Up</a>
+                            </p>
+
+                        </div>
+                </form>
             </div>
-            <div class="mt-4 p-3">
-                <div class="row mb-n4">
-                    <div class="col" style="text-align: center;">
-                        <div class="text-center text-white " style="padding-top: 50px;">
-                            <img src="{% static 'img/logof.png' %}" width="250" height="70" alt="">
-                        </div>
-                    </div>
-                    <div class="col" style="text-align: right;">
-                        <div class="cs-form" style="text-align: left;">
-                            <label>User Name</label>
-                            <input type="text" id="username" name="username" class="form-control" required/>
 
-                        </div>
-
-                        <div class="cs-form" style="text-align: left;">
-                            <label>Password</label>
-                            <input type="password" id="pass1" name="pass1" class="form-control" required/>
-
-                        </div>
-                        <button type="submit" class="btn btn-block btn-success btn-lg btn-floating my-3 btn-outline-white" style="background-color: #00838f;">
-                            Sign In
-                        </button>
-
-                    </div>
-                    <p class="text-center m-0">
-                        Create new account? <a class="text-decoration-none" style="color: #00838f;"
-                            href="{% url 'signup' %}">Sign Up</a>
-                    </p>
-
-                </div>
-        </form>
+        </div>
     </div>
-
-    </div>
-</div>
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
