--- a/templates/base.html
+++ b/templates/base.html
@@ -98,8 +98,21 @@
         </div>
         {% block content %} {% endblock %}
 
+        <div class="container">
+          <footer class="text-center p-1" style="bottom: 0; right: 0; width: 100%; position: fixed; margin-top: 20px;">
+
+            <div class="text-center">
+              <a class="img" href="#">
+                <img src="{% static 'img/logof.png' %}" width="100px" height="20px" alt="">
+              </a>
+            </div>
+            <!-- Copyright -->
+          </footer>
+        </div>
+
 
       </div>
+
     </div>
   </div>
 
@@ -140,15 +153,7 @@
 
 
 
-  <footer class="text-center" style="bottom: 0; left: 0; width: 100%; position: fixed; margin-top: 20px;">
 
-    <div class="text-center">
-      <a class="img" href="#">
-        <img src="{% static 'img/logof.png' %}" width="100px" height="25px" alt="">
-      </a>
-    </div>
-    <!-- Copyright -->
-  </footer>
   <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
   <script src="{% static 'js/test.js'%}"></script>
