--- a/templates/signup.html
+++ b/templates/signup.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container-fluid">
         <div class="row justify-content-center" style="box-sizing: border-box;">
-            <div class="col-sm-7 " style="margin-top: 100px;">
+            <div class="col-sm-8 " style="margin-top: 70px;">
 
                 <form class="cs-form card shadow-lg" method="post">
                     {% csrf_token %}
@@ -34,15 +34,15 @@
                     <div class="text-center text-white" style="background: #00838f; padding-top: 13px;">
                         <p style="font-family: Racing Sans One; font-size: 25px;">SIGN UP</p>
                     </div>
-                    <div class="mt-3 p-4">
-                        <div class="row mb-n4">
+                    <div class="mt-3 p-3">
+                        <div class="row mb-n4 align-items-center" >
                             <div class="col">
-                                <div class="text-center text-white" style="padding-top: 130px;">
-                                    <img src="{% static 'img/logof.png' %}" width="300" height="90" alt="">
+                                <div class="text-center text-white" >
+                                    <img src="{% static 'img/logof.png' %}" width="300" height="60" alt="">
                                 </div>
 
                             </div>
-                            <div class="col" style="text-align: right;">
+                            <div class="col m-1" style="text-align: right;">
                                 <div class="cs-form" style="text-align: left;">
                                     <label>First Name</label>
                                     <input type="text" id="fname" name="fname" class="form-control" />
@@ -83,7 +83,7 @@
 
                             </div>
 
-                            <p class="text-center mt-2">
+                            <p class="text-center mt-1">
                                 Already have an account? <a class="text-decoration-none" style="color: #00838f;"
                                     href="{% url 'signin' %}">Sign
                                     In</a>
