--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -6,16 +6,17 @@
 
 {% block titlecontent %} 
 
-<div class="row shadow-sm align-items-center m-1" style="  padding: 5px;  color: #00838f;">
+<div class="row shadow-sm align-items-center" style=" margin-top: 2px; padding: 5px;  color: #00838f;">
 
-    <div class="col">
-      <h2 style="font-family: Didact Gothic; text-align: left; font-size: 25px;">Add Task</h2>
+    <div class="col ">
+      <h2 style="font-family: Didact Gothic; text-align: left; font-size: 23px;">Add Task</h2>
     </div>
-    <div class="col align-items-center text-center">
+    <div class="col align-items-center text-center pb-1">
       <img src="{% static 'img/logof.png' %}" width="150px" height="25px" alt="">
     </div>
-    <div class="col align-items-center">
-      <h2  style="font-family: Didact Gothic; text-align: right; font-size: 17px;">Welcome {{ user.username }}</h2>
+    <div class="col align-items-center" >
+        <h2  style="font-family: Didact Gothic; text-align: right; font-size: 17px;">Welcome {{ user.username }}</h2>
+  
     </div>
     
   
