--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'icofont/icofont.min.css' %}">
-  <link
-    href='https://fonts.googleapis.com/css?family=Encode Sans Condensed|Palanquin Dark|Monomaniac One|Squada One|Didact Gothic|Konkhmer Sleokchher|Odibee Sans|Contrail One|Racing Sans One|Audiowide|DM Sans|Monoton|Megrim|Yanone Kaffeesatz|Bungee|Geo'
-    rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Encode Sans Condensed|Palanquin Dark|Monomaniac One|Squada One|Didact Gothic|Konkhmer Sleokchher|Odibee Sans|Contrail One|Racing Sans One|Audiowide|DM Sans|Monoton|Megrim|Yanone Kaffeesatz|Bungee|Geo' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
+
+
   <style>
     body {
       font-family: 'DM Sans';
