--- a/templates/client_list.html
+++ b/templates/client_list.html
@@ -7,20 +7,21 @@
 
 {% block titlecontent %}
 
-<div class="row shadow-sm align-items-center m-2" style=" padding: 5px;  color: #00838f;">
+<div class="row shadow-sm align-items-center" style=" margin-top: 0px; padding: 5px;  color: #00838f;">
 
     <div class="col">
-        <h2 style="font-family: Didact Gothic; text-align: left; font-size: 25px;">Add Client & Info</h2>
+      <h2 style="font-family: Didact Gothic; text-align: left; font-size: 25px;">Dashboard</h2>
     </div>
     <div class="col align-items-center text-center">
-        <img src="{% static 'img/logof.png' %}" width="150px" height="23px" alt="">
+      <img src="{% static 'img/logof.png' %}" width="150px" height="25px" alt="">
     </div>
-    <div class="col align-items-center">
-        <h2 style="font-family: Didact Gothic; text-align: right; font-size: 17px;">Welcome {{ user.username }}</h2>
+    <div class="col align-items-center" >
+        <h2  style="font-family: Didact Gothic; text-align: right; font-size: 17px;">Welcome {{ user.username }}</h2>
+  
     </div>
-
-
-</div>
+    
+  
+  </div>
 {% endblock %}
 
 {% block content %}
@@ -111,7 +112,7 @@
                         <div class="row align-items-center" style="text-align: center;">
                         
                             <div class="col-2">
-                                <i class="bi bi-people-fill fs-4"></i>
+                                <i class="bi bi-snow fs-4"></i>
                             </div>
                           <div class="col-10" style="text-align: left;">
                             <h6 class=" pt-1 " style="font-size: 20px;">
