--- a/templates/pending.html
+++ b/templates/pending.html
@@ -5,16 +5,17 @@
 {% block title %} <title> Pending-task </title> {% endblock %}
 
 {% block titlecontent %} 
-<div class="row shadow-sm align-items-center m-1 fixed" style=" padding: 5px;  color: #00838f;">
+<div class="row shadow-sm align-items-center" style=" margin-top: 1px; padding: 5px;  color: #00838f;">
 
   <div class="col">
-    <h2 style="font-family: Didact Gothic; text-align: left; font-size: 25px;">Pending Tasks</h2>
+    <h2 style="font-family: Didact Gothic; text-align: left; font-size: 23px;">Pending Task</h2>
   </div>
   <div class="col align-items-center text-center">
     <img src="{% static 'img/logof.png' %}" width="150px" height="25px" alt="">
   </div>
-  <div class="col align-items-center">
-    <h2  style="font-family: Didact Gothic; text-align: right; font-size: 17px;">Welcome {{ user.username }}</h2>
+  <div class="col align-items-center" >
+      <h2  style="font-family: Didact Gothic; text-align: right; font-size: 17px;">Welcome {{ user.username }}</h2>
+
   </div>
   
 
