--- a/templates/signin.html
+++ b/templates/signin.html
@@ -35,13 +35,13 @@
                     {% csrf_token %}
 
                     <div class="text-center text-white" style="background: #00838f; padding-top: 13px;">
-                        <p style="font-family: Racing Sans One; font-size: 25px;">SIGN IN</p>
+                        <p style=" font-size: 25px;">SIGN IN</p>
                     </div>
                     <div class="mt-4 p-3">
                         <div class="row mb-n4 align-items-center">
                             <div class="col" style="text-align: center;">
                                 <div class="text-center text-white pb-5">
-                                    <img src="{% static 'img/logof.png' %}" width="250" height="50" alt="">
+                                    <img src="{% static 'img/logof.png' %}" width="250" height="45" alt="">
                                 </div>
                             </div>
                             <div class="col" style="text-align: right;">
