--- a/templates/signup.html
+++ b/templates/signup.html
@@ -32,13 +32,13 @@
                     {% csrf_token %}
 
                     <div class="text-center text-white" style="background: #00838f; padding-top: 13px;">
-                        <p style="font-family: Racing Sans One; font-size: 25px;">SIGN UP</p>
+                        <p style=" font-size: 25px;">SIGN UP</p>
                     </div>
                     <div class="mt-3 p-3">
                         <div class="row mb-n4 align-items-center" >
                             <div class="col">
                                 <div class="text-center text-white" >
-                                    <img src="{% static 'img/logof.png' %}" width="300" height="60" alt="">
+                                    <img src="{% static 'img/logof.png' %}" width="300" height="50" alt="">
                                 </div>
 
                             </div>
@@ -75,6 +75,7 @@
                                     <input type="password" id="pass2" name="pass2" class="form-control" required />
 
                                 </div>
+            
                                 <p class="text-muted text-center small">At least 8 characters and 1 digit</p>
                                 <button type="submit" class="btn btn-info btn-lg btn-block "
                                     style="background-color: #00838f; color: #fff;">
