--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -49,14 +49,23 @@
                     </select>
                 </div>
                 <div class="col-lg-4">
-                    <label for="date" class="form-label" style="color: #00838f;">Date</label>
+                    <label for="date" class="form-label" style="color: #00838f;">Estimate finish Date</label>
                     <input type="date" name="date" class="form-control" required>
                 </div>
             </div>
             <div class="row mt-3">
-                <div class="col-12">
+                <div class="col-lg-8">
                     <label for="task" class="form-label" style="color: #00838f;">Task</label>
                     <input type="text-l" class="form-control" id="task" placeholder="Task name" name="task" required>
+                </div>
+                <div class="col-lg-4">
+                    <label for="priority" class="form-label" style="color: #00838f;">Status</label>
+                    <select name="priority" id="status" class="form-select">
+                        <option value="low">Low</option>
+                        <option value="medium">Medium</option>
+                        <option value="high">High</option>
+
+                    </select>
                 </div>
             </div>
 
