--- a/templates/completed_task.html
+++ b/templates/completed_task.html
@@ -68,6 +68,7 @@
         <thead>
           <tr>
             <th>Date</th>
+            <th>Finish date</th>
             <th>Task</th>
             <th>Client</th>
             <th>Type</th>
@@ -78,6 +79,7 @@
         <tbody id="myTable">
         {% for task in completed_tasks %}
           <tr>
+            <td>{{ task.created_at }}</td>
             <td>{{ task.date }}</td>
             <td>{{ task.name }}</td>
             <td>{{ task.client.name}}</td>
