--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -9,7 +9,7 @@
 <div class="row shadow-sm align-items-center" style=" margin-top: 0px; padding: 2px;  color: #00838f;">
 
     <div class="col">
-      <h2 style="font-family: Didact Gothic; text-align: left; font-size: 25px;">Edit Task</h2>
+      <h2 style="font-family: Didact Gothic; text-align: left; font-size: 25px;">Edit Profile</h2>
     </div>
     <div class="col align-items-center text-center">
       <img src="{% static 'img/logof.png' %}" width="150px" height="25px" alt="">
@@ -24,48 +24,81 @@
 
 
 {% block content %}
-
-<div class="row justify-content-center mt-3">
-    <form class="g-3 shadow-lg" method="get" style="background-color: white;  padding-bottom: 20px; padding-top: 20px;">
-        {% csrf_token %}
-        <div class="row">
-            <div class="col-12">
-                <label for="task" class="form-label">User Name</label>
-                <input type="text" value="{{user.username}}" class="form-control" id="task" placeholder="Task name"
-                    name="user_name">
+<div class="container">
+    <div class="row justify-content-center mt-3">
+        <form class="g-3 shadow-lg p-5"  method="get" style="background-color: white;  padding-bottom: 20px; padding-top: 20px;">
+            {% csrf_token %}
+    
+            <div class="row mt-3">
+                <div class="col">
+                    <label for="client" class="form-label">First Name</label>
+                    <input type="text" value="{{user.first_name}}" class="form-control" id="first_name" placeholder="first name"
+                        name="first_name">
+                </div>
+                <div class="col">
+                    <label for="client" class="form-label">Last Name</label>
+                    <input type="text" value="{{user.last_name}}" class="form-control" id="last_name" placeholder="last name"
+                        name="last_name">
+                </div>
+    
             </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-lg-4">
-                <label for="client" class="form-label">First Name</label>
-                <input type="text" value="{{user.first_name}}" class="form-control" id="first_name" placeholder="first_name"
-                    name="first_name">
+            <div class="row">
+                <div class="col">
+                    <label for="task" class="form-label">User Name</label>
+                    <input type="text" value="{{user.username}}" class="form-control" id="task" placeholder="Task name"
+                        name="user_name">
+                </div>
+    
             </div>
-
-            <div class="col-lg-4">
-                <label for="role" class="form-label">Status</label>
-                <select name="role" id="status" class="form-select">
-                    <option value="admin" {% if user.role == 'admin' %}selected{% endif %}>admin</option>
-                    <option value="general" {% if user.role == 'general' %}selected{% endif %}>general</option>
-
-                </select>
+            <div class="row">
+                <div class="col">
+                    <label for="task" class="form-label">Email</label>
+                    <input type="text" value="{{user.email}}" class="form-control" id="task" placeholder="example@gmail.com"
+                        name="email">
+                </div>
+    
+                <div class="col">
+                    <label for="role" class="form-label">Role</label>
+                    <select name="role" id="status" class="form-select">
+                        <option value="admin" {% if user.role == 'admin' %}selected{% endif %}>admin</option>
+                        <option value="general" {% if user.role == 'general' %}selected{% endif %}>general</option>
+    
+                    </select>
+                </div>
             </div>
-        </div>
-
-
-        </div>
-        <div class="row mt-3">
-            <div class="col-lg-10"></div>
-            <div class="col-lg-2">
-                <button type="submit" class="btn btn-lg btn-floating w-100 shadow-sm"
-                    style="background-color: #00838f; border: none; color: #fff; font-family: DM Sans;">
-                    <i class="bi bi bi-plus-square" style="color: #fff;"></i> Add</button>
-
+            <div class="row mt-3">
+                <div class="col">
+                    <label for="pass" class="form-label">Password</label>
+                    <input type="password" value="{{ user.password }}" class="form-control" id="pass1" placeholder="password"
+                        name="password">
+                </div>
+    
             </div>
-        </div>
-  
-</form>
+            <div class="row">
+                <div class="col">
+                    <label for="pass2" class="form-label">Confirm Password</label>
+                    <input type="password" value="" class="form-control" id="pass2" placeholder="enter the password again"
+                        name="password2">
+                </div>
+    
+            </div>
+            <div class="row mt-3">
+                <div class="col-lg-8"></div>
+                <div class="col-lg-4">
+                    <button type="submit" class="btn btn-lg btn-floating w-100 shadow-sm"
+                        style="background-color: #00838f; border: none; color: #fff; font-family: DM Sans;">
+                        <i class="bi bi bi-plus-square" style="color: #fff;"></i> Save Changed</button>
+    
+                </div>
+            </div>
+    
+        </form>
+    
+            </div>
 </div>
 
+
+
+  
 
 {% endblock%}
