--- a/templates/base.html
+++ b/templates/base.html
@@ -122,7 +122,7 @@
         {% endfor %}
         {% endif %}
         <!-- content -->
-        <div class="container">
+        <div class="col">
           {% block titlecontent %} {% endblock %}
         </div>
         {% block content %} {% endblock %}
