--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,6 +25,17 @@
 
 <body>
     <div class="container-fluid">
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-danger d-flex align-items-center alert-dismissible fade show" role="alert">
+      
+            <div>
+                {{ message }}
+            </div>
+            <button type="button" class="btn-close " data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+        {% endif %}
         <div class="row justify-content-center" style="box-sizing: border-box;">
             <div class="col-sm-8 " style="margin-top: 70px;">
 
