--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -69,7 +69,7 @@
             <div class="row mt-3">
                 <div class="col">
                     <label for="pass" class="form-label">Password</label>
-                    <input type="password" value="{{ user.password }}" class="form-control" id="pass1" placeholder="password"
+                    <input type="password" value="" class="form-control" id="pass1" placeholder="new password"
                         name="password">
                 </div>
     
